# ComfyUI-AceMusic

./: .gitignore  LICENSE  README.md  README_ja.md  README_ko.md  README_vi.md  README_zh-CN.md  README_zh-TW.md  __init__.py  acemusic_handler.py  install.py  nodes.py  pyproject.toml  requirements.txt  utils.py
assets/: .gitkeep
workflow/: AceMusic_Lyrics_v3.json
